--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
     }
     
     stages {
-        stage('SCM Checkout') {
+        stage('Git Hub') {
             steps {
                 git branch: 'main', url: 'https://github.com/SLR97/guvi'
             }
@@ -16,7 +16,7 @@ pipeline {
                 sh 'docker build -t shree97/new:os .'
             }
         }
-    stage('Docker Image Push') {
+    stage('Push Docker Image') {
             steps {
                 withCredentials([string(credentialsId: 'dockerPass', variable: 'dockerPassword')]) {
                     sh "docker login -u shree97 -p ${dockerPassword}"
@@ -28,7 +28,7 @@ pipeline {
     steps {
         script {
             try {
-                sh 'docker rm -f tomcattest'
+                sh 'docker rm -f guvi'
             } catch (error) {
                 // do nothing if there is an exception
             }
@@ -36,7 +36,7 @@ pipeline {
     }
 }
 
-    stage('Docker Deployment') {
+    stage('Application Display in container') {
             steps {
                 sh 'docker run -d -p 8090:80 --name guvi shree97/new:os' 
             }
